Finished to part 1 task 2

--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -197,7 +197,16 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "from tensorflow.keras.initializers import HeNormal\n",
     "\n",
+    "model_relu = Sequential()\n",
+    "model_relu.add(Flatten(input_shape=(32,32)))\n",
+    "model_relu.add(Dense(300, kernel_initializer=tf.keras.initializers.HeNormal()))\n",
+    "model_relu.add(Activation('relu'))\n",
+    "model_relu.add(Dense(150))\n",
+    "model_relu.add(Activation('relu'))\n",
+    "model_relu.add(Dense(4))\n",
+    "model_relu.add(Activation('softmax'))\n",
     "#----------------------------------------------------------------------------------------"
    ]
   },
@@ -243,7 +252,12 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "model_relu.compile(optimizer=AdamOpt, metrics=['accuracy'], loss='categorical_crossentropy')\n",
+    "history = model_relu.fit(BaseX_train, BaseY_train, batch_size=batch_size, epochs=epochs, verbose=2, validation_data=(BaseX_val, BaseY_val))\n",
     "\n",
+    "loss_and_metrics = model_relu.evaluate(X_test, Y_test, verbose=2)\n",
+    "print(\"Test Loss is {:.2f} \".format(loss_and_metrics[0]))\n",
+    "print(\"Test Accuracy is {:.2f} %\".format(100*loss_and_metrics[1]))\n",
     "#----------------------------------------------------------------------------------------"
    ]
   },
@@ -261,20 +275,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "new_a_model = Sequential()\n",
+    "new_a_model.add(Flatten(input_shape=(32,32)))\n",
+    "new_a_model.add(Dense(300, kernel_initializer=tf.keras.initializers.HeNormal()))\n",
+    "new_a_model.add(Activation('tanh'))\n",
+    "new_a_model.add(Dense(150))\n",
+    "new_a_model.add(Activation('tanh'))\n",
+    "new_a_model.add(Dense(4))\n",
+    "new_a_model.add(Activation('softmax'))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "########### need to explain!!!\n",
     "\n",
     "#----------------------------------------------------------------------------------------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_7\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "flatten_6 (Flatten)          (None, 1024)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_12 (Dense)             (None, 300)               307500    \n",
+      "_________________________________________________________________\n",
+      "activation_10 (Activation)   (None, 300)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_13 (Dense)             (None, 150)               45150     \n",
+      "_________________________________________________________________\n",
+      "activation_11 (Activation)   (None, 150)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_14 (Dense)             (None, 4)                 604       \n",
+      "_________________________________________________________________\n",
+      "activation_12 (Activation)   (None, 4)                 0         \n",
+      "=================================================================\n",
+      "Total params: 353,254\n",
+      "Trainable params: 353,254\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "new_a_model.summary()"
    ]
@@ -675,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "pycharm": {
    "stem_cell": {
