Finished coding - Theoretical answers left

--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HW: X-ray images classification\n",
+    "NNet=get_net(input_shape,drop,dropRate,reg)# HW: X-ray images classification\n",
     "--------------------------------------"
    ]
   },
@@ -24,13 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'skimage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-873022361976>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mimread\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrescale\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdownscale_local_mean\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'skimage'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -82,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -119,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/MLdata/MLcourse/X_ray/train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-3592d72b6079>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mval_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msrc_data\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'validation'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtest_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msrc_data\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'test'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mBaseX_train\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mBaseY_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_train_and_val\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mBaseX_val\u001b[0m \u001b[0;34m,\u001b[0m \u001b[0mBaseY_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess_train_and_val\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mX_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreprocess\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-87ff77e6780f>\u001b[0m in \u001b[0;36mpreprocess_train_and_val\u001b[0;34m(datapath)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# This part reads the images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mclasses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'b'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'c'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'l'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'h'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mimagelist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mfn\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdatapath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimagelist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mnum_classes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclasses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/MLdata/MLcourse/X_ray/train'"
+     ]
+    }
+   ],
    "source": [
     "#Loading the data for training and validation:\n",
     "src_data = '/MLdata/MLcourse/X_ray/'\n",
@@ -197,14 +222,14 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
-    "from tensorflow.keras.initializers import HeNormal\n",
+    "from tensorflow.keras.initializers import he_normal\n",
     "\n",
     "model_relu = Sequential()\n",
-    "model_relu.add(Flatten(input_shape=(32,32)))\n",
-    "model_relu.add(Dense(300, kernel_initializer=tf.keras.initializers.HeNormal()))\n",
-    "model_relu.add(Activation('relu'))\n",
+    "model_relu.add(Flatten(input_shape=(32,32,1)))\n",
+    "model_relu.add(Dense(300, kernel_initializer=tf.keras.initializers.he_normal()))\n",
+    "model_relu.add(Activation('relu',name='Relu1'))\n",
     "model_relu.add(Dense(150))\n",
-    "model_relu.add(Activation('relu'))\n",
+    "model_relu.add(Activation('relu',name='Relu2'))\n",
     "model_relu.add(Dense(4))\n",
     "model_relu.add(Activation('softmax'))\n",
     "#----------------------------------------------------------------------------------------"
@@ -281,11 +306,11 @@
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
     "new_a_model = Sequential()\n",
-    "new_a_model.add(Flatten(input_shape=(32,32)))\n",
-    "new_a_model.add(Dense(300, kernel_initializer=tf.keras.initializers.HeNormal()))\n",
-    "new_a_model.add(Activation('tanh'))\n",
+    "new_a_model.add(Flatten(input_shape=(32,32,1)))\n",
+    "new_a_model.add(Dense(300, kernel_initializer=tf.keras.initializers.he_normal()))\n",
+    "new_a_model.add(Activation('tanh',name='tanh1'))\n",
     "new_a_model.add(Dense(150))\n",
-    "new_a_model.add(Activation('tanh'))\n",
+    "new_a_model.add(Activation('tanh',name='tanh2'))\n",
     "new_a_model.add(Dense(4))\n",
     "new_a_model.add(Activation('softmax'))\n",
     "\n",
@@ -372,7 +397,12 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "new_a_model.compile(optimizer=AdamOpt, metrics=['accuracy'], loss='categorical_crossentropy')\n",
+    "history = new_a_model.fit(BaseX_train, BaseY_train, batch_size=batch_size, epochs=epochs, verbose=2, validation_data=(BaseX_val, BaseY_val))\n",
     "\n",
+    "loss_and_metrics = model_relu.evaluate(X_test, Y_test, verbose=2)\n",
+    "print(\"Test Loss is {:.2f} \".format(loss_and_metrics[0]))\n",
+    "print(\"Test Accuracy is {:.2f} %\".format(100*loss_and_metrics[1]))\n",
     "#-----------------------------------------------------------------------------------------"
    ]
   },
@@ -403,7 +433,11 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "history = new_a_model.fit(BaseX_train, BaseY_train, batch_size=batch_size, epochs=epochs, verbose=2, validation_data=(BaseX_val, BaseY_val))\n",
     "\n",
+    "loss_and_metrics = model_relu.evaluate(X_test, Y_test, verbose=2)\n",
+    "print(\"Test Loss is {:.2f} \".format(loss_and_metrics[0]))\n",
+    "print(\"Test Accuracy is {:.2f} %\".format(100*loss_and_metrics[1]))\n",
     "#-----------------------------------------------------------------------------------------"
    ]
   },
@@ -435,7 +469,14 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
-    "\n",
+    "model_relu = Sequential()\n",
+    "model_relu.add(Flatten(input_shape=(32,32,1)))\n",
+    "model_relu.add(Dense(300, kernel_initializer=tf.keras.initializers.he_normal()))\n",
+    "model_relu.add(Activation('relu',name='Relu1'))\n",
+    "model_relu.add(Dense(150))\n",
+    "model_relu.add(Activation('relu',name='Relu2'))\n",
+    "model_relu.add(Dense(4))\n",
+    "model_relu.add(Activation('softmax'))\n",
     "#----------------------------------------------------------------------------------------"
    ]
   },
@@ -459,7 +500,12 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "model_relu.compile(optimizer=AdamOpt, metrics=['accuracy'], loss='categorical_crossentropy')\n",
+    "history = model_relu.fit(BaseX_train, BaseY_train, batch_size=batch_size, epochs=epochs, verbose=2, validation_data=(BaseX_val, BaseY_val))\n",
     "\n",
+    "loss_and_metrics = model_relu.evaluate(X_test, Y_test, verbose=2)\n",
+    "print(\"Test Loss is {:.2f} \".format(loss_and_metrics[0]))\n",
+    "print(\"Test Accuracy is {:.2f} %\".format(100*loss_and_metrics[1]))\n",
     "#----------------------------------------------------------------------------------------"
    ]
   },
@@ -491,7 +537,17 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
-    "\n",
+    "new_a_model = Sequential()\n",
+    "new_a_model.add(Flatten(input_shape=(32,32,1)))\n",
+    "new_a_model.add(Dense(300, kernel_initializer=tf.keras.initializers.he_normal()))\n",
+    "new_a_model.add(BatchNormalization())\n",
+    "new_a_model.add(Activation('tanh',name='tanh1'))\n",
+    "new_a_model.add(Dense(150))\n",
+    "new_a_model.add(BatchNormalization())\n",
+    "new_a_model.add(Activation('tanh',name='tanh1'))\n",
+    "new_a_model.add(Dense(4))\n",
+    "new_a_model.add(BatchNormalization())\n",
+    "new_a_model.add(Activation('softmax'))\n",
     "#---------------------------------------------------------------------------------------"
    ]
   },
@@ -517,7 +573,11 @@
    "source": [
     "#Preforming the training by using fit \n",
     "#--------------------------Impelment your code here:-------------------------------------\n",
+    "history = new_a_model.fit(BaseX_train, BaseY_train, batch_size=batch_size, epochs=epochs, verbose=2, validation_data=(BaseX_val, BaseY_val))\n",
     "\n",
+    "loss_and_metrics = model_relu.evaluate(X_test, Y_test, verbose=2)\n",
+    "print(\"Test Loss is {:.2f} \".format(loss_and_metrics[0]))\n",
+    "print(\"Test Accuracy is {:.2f} %\".format(100*loss_and_metrics[1]))\n",
     "#----------------------------------------------------------------------------------------"
    ]
   },
@@ -602,8 +662,7 @@
     "epochs = 25\n",
     "drop = True\n",
     "dropRate = 0.3\n",
-    "reg = 1e-2\n",
-    "NNet = get_net(input_shape,drop,dropRate,reg)"
+    "reg = 1e-2"
    ]
   },
   {
@@ -638,11 +697,7 @@
     "AdamOpt = Adam(lr=learn_rate,decay=decay)\n",
     "\n",
     "#Compile the network: \n",
-    "NNet.compile(optimizer=AdamOpt, metrics=['acc'], loss='categorical_crossentropy')\n",
-    "\n",
-    "#Saving checkpoints during training:\n",
-    "Checkpath = os.getcwd()\n",
-    "Checkp = ModelCheckpoint(Checkpath, monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=True, save_freq=1)"
+    "NNet.compile(optimizer=AdamOpt, metrics=['acc'], loss='categorical_crossentropy')\n"
    ]
   },
   {
@@ -703,8 +758,56 @@
    "outputs": [],
    "source": [
     "#--------------------------Impelment your code here:-------------------------------------\n",
-    "\n",
+    "def get_net(input_shape,drop,dropRate,reg,filters=[64,128,128,256,256]):\n",
+    "    #Defining the network architecture:\n",
+    "    model = Sequential()\n",
+    "    model.add(Permute((1,2,3),input_shape = input_shape))\n",
+    "    model.add(Conv2D(filters=filters[0], kernel_size=(3,3), padding='same', activation='relu',name='Conv2D_1',kernel_regularizer=regularizers.l2(reg)))\n",
+    "    if drop:\n",
+    "        model.add(Dropout(rate=dropRate))\n",
+    "    model.add(BatchNormalization(axis=1))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Conv2D(filters[1], kernel_size=(3,3), padding='same', activation='relu',name='Conv2D_2',kernel_regularizer=regularizers.l2(reg)))\n",
+    "    if drop:    \n",
+    "        model.add(Dropout(rate=dropRate))\n",
+    "    model.add(BatchNormalization(axis=1))\n",
+    "    model.add(Conv2D(filters[2], kernel_size=(3,3), padding='same', activation='relu',name='Conv2D_3',kernel_regularizer=regularizers.l2(reg)))\n",
+    "    if drop:\n",
+    "        model.add(Dropout(rate=dropRate))\n",
+    "    model.add(BatchNormalization(axis=1))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Conv2D(filters[3], kernel_size=(3,3), padding='same', activation='relu',name='Conv2D_4',kernel_regularizer=regularizers.l2(reg)))\n",
+    "    if drop:\n",
+    "        model.add(Dropout(rate=dropRate))\n",
+    "    model.add(BatchNormalization(axis=1))\n",
+    "    model.add(Conv2D(filters[4], kernel_size=(3,3), padding='same', activation='relu',name='Conv2D_5',kernel_regularizer=regularizers.l2(reg)))\n",
+    "    if drop:\n",
+    "        model.add(Dropout(rate=dropRate))\n",
+    "    model.add(BatchNormalization(axis=1))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Flatten())\n",
+    "    #Fully connected network tail:      \n",
+    "    model.add(Dense(512, activation='elu',name='FCN_1')) \n",
+    "    if drop:\n",
+    "        model.add(Dropout(rate=dropRate))\n",
+    "    model.add(Dense(128, activation='elu',name='FCN_2'))\n",
+    "    model.add(Dense(4, activation= 'softmax',name='FCN_3'))\n",
+    "    model.summary()\n",
+    "    return model\n",
     "#----------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NNet=get_net(input_shape,drop,dropRate,reg,filters=[32,64,64,128,128])\n",
+    "NNet.compile(optimizer=AdamOpt, metrics=['acc'], loss='categorical_crossentropy')\n",
+    "h = NNet.fit(x=BaseX_train, y=BaseY_train, batch_size=batch_size, epochs=epochs, verbose=1, validation_split=0, validation_data = (BaseX_val, BaseY_val), shuffle=True)\n",
+    "results = NNet.evaluate(X_test,Y_test)\n",
+    "print('test loss, test acc:', results)"
    ]
   },
   {
